<resources>
    <string name="app_name">Doginfo</string>
    <string name="dog_breed_edittext_hint">Dog Breed</string>
    <string name="search_button">Search</string>
    <string name="energy">Energy</string>
    <string name="trainability">Trainability</string>
    <string name="protectiveness">Protectiveness</string>
    <string name="playfulness">Playfulness</string>
    <string name="content_description_start_icon">search icon</string>
    <string name="no_dogs_were_found_placeholder">Sorry! No dogs were found…</string>
    <string name="enter_the_dog_breed">Please… Enter the Dog Breed!</string>
</resources>